[package]
name = "caprice"
version = "0.1.0"
authors = ["Kyriakos Papachrysanthou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.13.3"    
exitcode = "1.1.2"
anyhow = "1.0.19"

[dev-dependencies]
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"