[package]
name = "caprice"
description = "A Repl for Rust projects featuring an easy to use, zsh like autocomplete feature."
repository = "https://github.com/3kyro/caprice.git"
license = "MIT"
keywords = ["REPL", "autocomplete", "zsh"]
readme = "readme.md"
version = "0.2.4"
authors = ["Kyriakos Papachrysanthou"]
edition = "2018"
categories = ["command-line-interface", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
exitcode = "1.1.2"

[dev-dependencies]
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"